[package]
name = "ststracker-client"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies]
libsts = "0.1.0"
fwatch = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.19"
ststracker-base = { path = "../ststracker-base/" }
itsdangerous = "0.3.1"
config = "0.9.3"
