[package]
name = "ststracker-client"
version = "0.1.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies]
config = "0.9.3"
fwatch = "0.1.3"
itsdangerous = "0.3.1"
libsts = "0.2.0"
reqwest = "0.9.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ststracker-base = { path = "../ststracker-base/" }

